--- a/estructuras-de-datos-y-algoritmos/estructuras-de-datos/Debug/makefile
+++ b/estructuras-de-datos-y-algoritmos/estructuras-de-datos/Debug/makefile
@@ -8,7 +8,7 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
--include lineales/subdir.mk
+-include src/subdir.mk
 -include .metadata/.plugins/org.eclipse.cdt.make.core/subdir.mk
 -include subdir.mk
 -include objects.mk
@@ -39,19 +39,19 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: TADS
+all: estructuras-de-datos
 
 # Tool invocations
-TADS: $(OBJS) $(USER_OBJS)
+estructuras-de-datos: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: MacOS X C++ Linker'
-	g++  -o "TADS" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++  -o "estructuras-de-datos" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(C++_DEPS)$(OBJS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) TADS
+	-$(RM) $(C++_DEPS)$(OBJS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) estructuras-de-datos
 	-@echo ' '
 
 .PHONY: all clean dependents
