--- a/estructuras-de-datos-y-algoritmos/algoritmos/Debug/makefile
+++ b/estructuras-de-datos-y-algoritmos/algoritmos/Debug/makefile
@@ -38,19 +38,19 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: Algorithms
+all: algoritmos
 
 # Tool invocations
-Algorithms: $(OBJS) $(USER_OBJS)
+algoritmos: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: MacOS X C++ Linker'
-	g++  -o "Algorithms" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++  -o "algoritmos" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(C++_DEPS)$(OBJS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) Algorithms
+	-$(RM) $(C++_DEPS)$(OBJS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) algoritmos
 	-@echo ' '
 
 .PHONY: all clean dependents
