--- a/estructuras-de-datos-y-algoritmos/algoritmos/Debug/makefile
+++ b/estructuras-de-datos-y-algoritmos/algoritmos/Debug/makefile
@@ -8,7 +8,9 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include examenes/subdir.mk
 -include backtracking/subdir.mk
+-include .metadata/.plugins/org.eclipse.cdt.make.core/subdir.mk
 -include subdir.mk
 -include objects.mk
 
