Añadido VectorDinamico, Pila y PilaEnlazada

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ nbproject/private/
 
 .metadata
 estructuras-de-datos-y-algoritmos/estructuras-de-datos/.settings
+estructuras-de-datos-y-algoritmos/estructuras-de-datos/Debug
