creados scripts DDL

--- a/bases-de-datos/practica2BD/.classpath
+++ b/bases-de-datos/practica2BD/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="/Users/repli/Documents/Programacion/ucm/bases-de-datos/practica2BD/lib/ojdbc6.jar"/>
-	<classpathentry kind="lib" path="lib/orai18n.jar"/>
+	<classpathentry kind="lib" path="/Users/repli/Documents/Programacion/ucm/bases-de-datos/practica2BD/lib/orai18n.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
